name:                config-value-getopt
version:             0.1.1.1
synopsis:            Interface between config-value and System.GetOpt
description:         This package allows to set command line configuration
                     options from a file using the config-value syntax.
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2016 Galois, Inc.
category:            Configuration
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/GaloisInc/config-value-getopt
bug-reports:         https://github.com/GaloisInc/config-value-getopt/issues
tested-with:         GHC==8.0.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.1

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/GaloisInc/config-value-getopt

library
  exposed-modules:     Config.GetOpt
  build-depends:       base >=4.8 && <4.14,
                       text >=1.2.1.3 && <1.3,
                       config-value >=0.7 && <0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
